# org-agent

./: .gitignore  README.md  pyproject.toml
experiments/: evaluate_agent.py  list_ground_truth.py  spaCy_test.py
src/org_agent/: __init__.py  api.py  browser_use_lookup.py  cli.py  graph.py  llm.py  models.py  progress.py  registry.py  search.py  settings.py  website.py
src/org_agent/countries/_DEFAULT/: address_fields.json
src/org_agent/countries/ch/: registry.py
src/org_agent/data/: company_types.csv  industries.csv  legal_forms.csv  sectors.csv
tests/: test_api.py  test_cli.py  test_graph.py  test_models.py  test_registry.py  test_settings.py  test_website.py
