[project]
name = "org-agent"
version = "0.1.0"
description = "LangGraph-powered organization enrichment CLI and library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.9.0",
    "httpx>=0.27.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "playwright>=1.45.0",
    "pycountry>=26.2.16",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "sentence-transformers>=3.0.0",
    "spacy>=3.8.14",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.5.0",
]

[project.scripts]
org-agent = "org_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/org_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
